# cpp-ds-strpo

./: .clang-tidy  .gitignore  CMakeLists.txt  INSTALL_ON_NOTEBOOK.md  README.md  README_FIRST.md  VALIDATION_NOTE.md
SD/SD_01_oop_basics_rect_barrel_matrix_string/: .gitignore  CMakeLists.txt  README.md
SD/SD_01_oop_basics_rect_barrel_matrix_string/guide/: 04_SD_LAB1_GUIDE.md
SD/SD_01_oop_basics_rect_barrel_matrix_string/include/ds/: matrix.hpp  rect.hpp  text_wrapper.hpp
SD/SD_01_oop_basics_rect_barrel_matrix_string/src/: barrel.cpp  matrix.cpp  rect.cpp  text_wrapper.cpp
SD/SD_01_oop_basics_rect_barrel_matrix_string/tests/: test_barrel.cpp  test_bounding_rect.cpp  test_rect_operations.cpp  test_rect_properties.cpp  test_text_wrapper.cpp
SD/SD_02_file_abstractions_base32_rle/: CMakeLists.txt  README.md
SD/SD_02_file_abstractions_base32_rle/apps/: lab2_demo.cpp
SD/SD_02_file_abstractions_base32_rle/include/ds/: base32_codec.hpp  composed_files.hpp  ifile.hpp  rle_codec.hpp  rle_file.hpp
SD/SD_02_file_abstractions_base32_rle/src/: base32_codec.cpp
SD/SD_02_file_abstractions_base32_rle/tests/: test_base_file_move.cpp  test_large_file_roundtrip.cpp
SD/SD_04_circle_doubly_linked_list/: CMakeLists.txt  README.md
SD/SD_04_circle_doubly_linked_list/apps/: lab4_demo.cpp
SD/SD_04_circle_doubly_linked_list/guide/: SD_LAB4_GUIDE.md  SD_LAB4_TASK_BY_TASK.md
SD/SD_04_circle_doubly_linked_list/include/ds/: circle.hpp  circle_list.hpp  point.hpp
SD/SD_04_circle_doubly_linked_list/src/: circle.cpp  circle_list.cpp  point.cpp
SD/SD_04_circle_doubly_linked_list/tests/: test_circle_list_lab4.cpp
STRPO/: STRPO_1_5_REVISION_AND_DEFENSE_GUIDE.md
STRPO/STRPO_02_gitflow_pull_request/code_base_sd3/: CMakeLists.txt
STRPO/STRPO_02_gitflow_pull_request/code_base_sd3/apps/: lab3_demo.cpp
STRPO/STRPO_02_gitflow_pull_request/code_base_sd3/include/ds/: bool_array.hpp  notification.hpp
STRPO/STRPO_02_gitflow_pull_request/code_base_sd3/src/: base_file.cpp  bool_array.cpp  worker_db.cpp
STRPO/STRPO_02_gitflow_pull_request/code_base_sd3/tests/: test_bool_array.cpp  test_my_string_lab3.cpp  test_worker_db.cpp
STRPO/STRPO_03_cmake_static_library_and_find_library/: CMakeLists.txt  CMakePresets.json  README.md
STRPO/STRPO_03_cmake_static_library_and_find_library/apps/: lab1_demo.cpp
STRPO/STRPO_03_cmake_static_library_and_find_library/include/ds/: barrel.hpp  base_file.hpp  worker_db.hpp
STRPO/STRPO_03_cmake_static_library_and_find_library/optional_dynamic/: CMakeLists.txt  README.md
STRPO/STRPO_03_cmake_static_library_and_find_library/optional_dynamic/explicit/: CMakeLists.txt  explicit_cat.cpp
STRPO/STRPO_03_cmake_static_library_and_find_library/optional_dynamic/implicit/: implicit_cat.cpp  implicit_cat.hpp
STRPO/STRPO_03_cmake_static_library_and_find_library/optional_dynamic/loader/: main.cpp
STRPO/STRPO_03_cmake_static_library_and_find_library/src/: base_file.cpp  composed_files.cpp  rle_codec.cpp  rle_file.cpp
STRPO/STRPO_03_cmake_static_library_and_find_library/tests/: test_file_roundtrip.cpp  test_matrix_lab3.cpp  test_rect_basic_methods.cpp
STRPO/STRPO_03_cmake_static_library_and_find_library/tools/: verify_project_asan.sh
STRPO/STRPO_04_debug_examples_sanitizers_clang_tidy/: CMakeLists.txt  README.md  leak.cpp  link_error_main.cpp  segfault.cpp  ub.cpp
STRPO/STRPO_04_debug_examples_sanitizers_clang_tidy/guide/: STRPO_LAB4_DEBUG_GUIDE.md
build-asan/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  ds_core.lib  lab1_demo.ilk  lab2_demo.ilk  lab3_demo.ilk
build-prebuilt/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  ds_and_strpo.slnx  ds_core.vcxproj  ds_core.vcxproj.filters  ds_external_codec.vcxproj  ds_external_codec.vcxproj.filters  lab1_demo.vcxproj  lab1_demo.vcxproj.filters  lab2_demo.vcxproj  lab2_demo.vcxproj.filters  lab3_demo.vcxproj  lab3_demo.vcxproj.filters
coursework_prep/: kanban_columns.md  pull_request_template.md
debug_examples/: CMakeLists.txt  README.md  leak.cpp  link_error_decl.hpp  segfault.cpp  ub.cpp
debug_examples/build-link/: ALL_BUILD.vcxproj  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  leak_demo.vcxproj  leak_demo.vcxproj.filters  link_error_demo.vcxproj  link_error_demo.vcxproj.filters  segfault_demo.vcxproj  segfault_demo.vcxproj.filters  strpo4_debug_examples.slnx  ub_demo.vcxproj  ub_demo.vcxproj.filters
debug_examples/build-link/leak_demo.dir/Debug/: leak_demo.exe.recipe
debug_examples/build-link/leak_demo.dir/Debug/leak_demo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
debug_examples/build-link/link_error_demo.dir/Debug/link_error_demo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.write.1.tlog  link_error_demo.lastbuildstate
debug_examples/build-link/segfault_demo.dir/Debug/: segfault_demo.exe.recipe  segfault_demo.ilk
debug_examples/build-link/segfault_demo.dir/Debug/segfault_demo.tlog/: CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
debug_examples/build-link/ub_demo.dir/Debug/: ub_demo.exe.recipe  ub_demo.ilk
debug_examples/build-link/ub_demo.dir/Debug/ub_demo.tlog/: CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
debug_examples/build-link/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
debug_examples/build-link/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
docker/: Dockerfile  README.md  (+1 more)
optional_dynamic/: CMakeLists.txt  README.md
optional_dynamic/explicit/: explicit_cat.cpp
optional_dynamic/implicit/: implicit_cat.cpp  implicit_cat.hpp
optional_dynamic/loader/: main.cpp
(+179 files in other folders)
