cmake_minimum_required(VERSION 3.16)
project(sd_lab1 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
include(CTest)
add_library(sd_lab1_core STATIC src/rect.cpp src/barrel.cpp src/matrix.cpp src/my_string.cpp src/text_wrapper.cpp)
target_include_directories(sd_lab1_core PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
add_executable(lab1_demo apps/lab1_demo.cpp)
target_link_libraries(lab1_demo PRIVATE sd_lab1_core)
if(BUILD_TESTING)
foreach(test_name test_rect_basic_methods test_rect_properties test_rect_operations test_bounding_rect test_barrel test_text_wrapper)
  add_executable(${test_name} tests/${test_name}.cpp)
  target_link_libraries(${test_name} PRIVATE sd_lab1_core)
  add_test(NAME ${test_name} COMMAND ${test_name})
endforeach()
endif()
