cmake_minimum_required(VERSION 3.16)
project(sd_lab2 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
include(CTest)
add_library(sd_lab2_core STATIC src/base_file.cpp src/base32_codec.cpp src/base32_file.cpp src/rle_codec.cpp src/rle_file.cpp src/composed_files.cpp src/my_string.cpp)
target_include_directories(sd_lab2_core PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
add_executable(lab2_demo apps/lab2_demo.cpp)
target_link_libraries(lab2_demo PRIVATE sd_lab2_core)
if(BUILD_TESTING)
foreach(test_name test_file_roundtrip test_large_file_roundtrip test_base_file_move)
  add_executable(${test_name} tests/${test_name}.cpp)
  target_link_libraries(${test_name} PRIVATE sd_lab2_core)
  add_test(NAME ${test_name} COMMAND ${test_name})
endforeach()
endif()
