cmake_minimum_required(VERSION 3.16)
project(sd_lab4 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
include(CTest)
add_library(sd_lab4_core STATIC src/point.cpp src/circle.cpp src/circle_list.cpp)
target_include_directories(sd_lab4_core PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
add_executable(lab4_demo apps/lab4_demo.cpp)
target_link_libraries(lab4_demo PRIVATE sd_lab4_core)
if(BUILD_TESTING)
  add_executable(test_circle_list_lab4 tests/test_circle_list_lab4.cpp)
  target_link_libraries(test_circle_list_lab4 PRIVATE sd_lab4_core)
  add_test(NAME test_circle_list_lab4 COMMAND test_circle_list_lab4)
endif()
