cmake_minimum_required(VERSION 3.16)
project(sd_lab3 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
include(CTest)
add_library(sd_lab3_core STATIC src/base_file.cpp src/bool_array.cpp src/matrix.cpp src/my_string.cpp src/notification.cpp src/worker_db.cpp)
target_include_directories(sd_lab3_core PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
add_executable(lab3_demo apps/lab3_demo.cpp)
target_link_libraries(lab3_demo PRIVATE sd_lab3_core)
if(BUILD_TESTING)
foreach(test_name test_base_file_move test_my_string_lab3 test_matrix_lab3 test_worker_db test_notification_queues test_bool_array)
  add_executable(${test_name} tests/${test_name}.cpp)
  target_link_libraries(${test_name} PRIVATE sd_lab3_core)
  add_test(NAME ${test_name} COMMAND ${test_name})
endforeach()
endif()
